@startuml sharing
class "User" as user {
    -UUID id 
    -String nickname 
    -String password 
    +UUID avatarId
    +String displayName
    +String description
    +ArrayList<Skill> learn 
    +ArrayList<Skill> teach  
    +Time timezone
}
' class "ProfileUser" as profile {
'     +User user
'     +String description
'     +ArrayList<Skill> learn 
'     +ArrayList<Skill> teach  
'     +Time timezone

' }
' note left of profile::exercise
' "Это занятия, которые пользователь ведет 
' или по которым учится"
' end note 
' note left of profile::learn
' "Это навыки, которые указывает
' пользователь хочу научиться\могу научить"
' end note
class "Review" as review {
    -UUID id 
    +User user 
    +String description 
    +Exercise exercise 
}
class "Exercise" as exercise {
    -UUID id 
    +String name 
    +String description 
    +User owner
    +User subscriber
}
note left of exercise::subscribers
"Пользователи которые 
записаны на это занятие"
end note
class "Skill" as skill {
    -UUID id 
    +String name
}

'class "Time" as time {
'}

' user --> profile
user --> skill  
user --> exercise 
user --> review
' profile o-- time
review --> exercise
 
@enduml